Commented out the popup so we can work on the project, and fixed spacing on lastpage

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -267,8 +267,7 @@ h4 {
     background-size: cover; 
   }
 h4 {
-    padding: 50px;
-    margin: auto;
+    padding: 40px 0 0 0;
     width: 750px;
     color: black;
     font-size: 50px;
